@@ -117,6 +117,20 @@ public class InstallThread extends Thread
 				if (fileName.equals("././@LongLink"))
 				{
 					fileName = new BufferedReader(new InputStreamReader(tarInput)).readLine();
+					if(fileName == null)
+					{
+						// missing filename ??
+						throw new IOException("Invalid or corrupt contents: file in tar with long filename but no filename found");
+					}
+					// bug #3837 - can't install because long file name ends with \0
+					while(!fileName.isEmpty() && fileName.charAt(fileName.length()-1) == 0){
+						fileName = fileName.substring(0, fileName.length()-1);
+					}
+					if(fileName.isEmpty())
+					{
+						// filename consists in '\0's ??
+						throw new IOException("Invalid or corrupt contents: file in tar with long filename but empty filename found");
+					}
 					continue;
 				}
 			}
